--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "slugify": "^1.6.6",
     "zod": "^4.3.6"
   }
 }
